# dpdata_psi4

./: pyproject.toml
dpdata_psi4/: dpdata_plugin.py  read_psi4.py
tests/: test.py
