[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "dpdata_psi4"
dynamic = ["version"]
description = ""
authors = [
    { name = "Jinzhe Zeng", email = "jinzhe.zeng@rutgers.edu"},
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
]
dependencies = [
    'numpy',
    'dpdata',
]
requires-python = ">=3.7"
readme = "README.md"
keywords = ["dpdata", "psi4"]

[project.urls]
repository = "https://github.com/njzjz/dpdata_psi4"

[project.optional-dependencies]

[project.entry-points."dpdata.plugins"]
psi4 = "dpdata_psi4.dpdata_plugin:PSI4Format"

[tool.setuptools.packages.find]
include = ["dpdata_psi4*"]

[tool.setuptools_scm]
